# llvm-sys-wrapper

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/brainhack/: Cargo.toml  run.sh
examples/brainhack/src/: main.rs
examples/fib/: Cargo.toml
examples/fib/src/: main.rs
src/: builder.rs  context.rs  cstring_manager.rs  engine.rs  function.rs  lib.rs  module.rs  phi.rs  struct_type.rs
tests/: array_alloca.rs  hello_world.rs  interpreter.rs  jit.rs  lib.rs  list.rs  printf.rs  puts.rs  tailcall.rs
